<resources>
    <string name="app_name">Eventify</string>
    <string name="welcome_back_sir">Welcome Back Sir!</string>
    <string name="app_logo">App logo</string>
    <string name="email_address">Email Address</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account">Back to Login</string>
    <string name="create_a_new_account">Dont Have A Account?Register For Free</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="budget">Budget</string>
    <string name="guest">Guest</string>
    <string name="vendor">Vendor</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="name">Family Name</string>
    <string name="Vendorname">Name</string>
    <string name="budget_details">Budget Details</string>
    <string name="Category">Category</string>
    <string name="note">Note</string>
    <string name="estimated_amount">Estimated Amount</string>
    <string name="balance">Balance:</string>
    <string name="pending">Pending:</string>
    <string name="paid">Paid:</string>
    <string name="amount">Amount</string>
    <string name="payment_status">Payment Status</string>
    <string name="addpaymentpending">Pending</string>
    <string name="addpaymentpaid">Paid</string>
    <string name="expired_date">Expired Date</string>
    <string name="submit">Submit</string>
    <string name="guest_details">Guest Details</string>
    <string name="Male">No.Of Male</string>
    <string name="Female">No.Of Female</string>
    <string name="invitation_sent">Invitation Sent</string>
    <string name="not_sent">Not Sent</string>
    <string name="baby">Baby</string>
    <string name="Male_Number">Total Number</string>
    <string name="Female_Number">Total Number</string>
    <string name="male">No.Of Male</string>
    <string name="female">No.Of Female</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="phone_number">Phone Number</string>
    <string name="Family_Member">No Of Family Member</string>
    <string name="Total_Number">Total Number</string>
    <string name="email_id">Email Id</string>
    <string name="address">Address</string>
    <string name="contacts_details">Contacts Details(Head Of The Family)</string>
    <string name="payments">Payments</string>
    <string name="select_a_category">Select A Category</string>
    <string name="companions">Companions</string>
    <string name="companion_details">Companion Details</string>
    <string name="compasubmit">Submit</string>
    <string name="website">Website</string>
    <string name="vendor_details">Vendor Details</string>
    <string name="taskpending">Pending</string>
    <string name="completed">Completed</string>
    <string name="subtasks">Subtasks</string>
    <string name="date">Date</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="task_list">Task List</string>
    <string name="menubudget">Budget</string>
    <string name="Menuguest">Guest</string>
    <string name="menuvendor">Vendor</string>
    <string name="Setting">Setting\n</string>
    <string name="sort">Sort</string>
    <string name="Filter">Filter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="profile">Profile</string>
    <string name="user_information">User Information</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate us</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telegram">Telegram</string>
    <string name="settings">Settings</string>
    <string name="pdf_report">Pdf Report</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="task_name">Task Name</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="contact_details">Contact Details</string>
    <string name="total_amount">Total Amount</string>
    <string name="paid_amount">Paid Amount</string>
    <string name="more">More</string>
    <string name="budget_title">Budget Title</string>
    <string name="unique_user_name">Unique User Name</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="set_up_an_event_and_start_planning_it">Create a new event and start planning it</string>
    <string name="About">About</string>
    <string name="splash_welcome">Your gateway to seamless event planning. Manage, organize, and create unforgettable experiences with ease</string>
    <string name="splash_budget">Create a budget management feature to help users efficiently track their event expenses. Users can set budgets, add expenses, and monitor spending to ensure their event remains within financial limits</string>
    <string name="splash_vendor"> Implement a vendor management system, allowing users to store and organize information about event vendors. Users can input vendor details, such as contact information, services offered, and contracts, to simplify vendor selection and management for their events</string>
    <string name="splash_guest"> Develop a guest management feature to help users keep track of event attendees. Users can create and manage guest lists This feature simplifies guest coordination and communication, ensuring a smooth and organized event planning process.</string>
    <string name="splash_task">Implement a robust task management system that enables users to create, organize, and track their tasks seamlessly. Users can set due dates, priorities, and descriptions for each tas</string>
</resources>