<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/setting"
        android:title="@string/settings" />
    <item
        android:id="@+id/nav_pdf"
        android:icon="@drawable/pdfreport"
        android:title="@string/pdf_report" />
<!--    <item-->
<!--        android:id="@+id/synch"-->
<!--        android:icon="@drawable/ic_baseline_sync_24"-->
<!--        android:title="Synch" />-->
<!--    <item-->
<!--        android:id="@+id/trash"-->
<!--        android:icon="@drawable/"-->
<!--        android:title="Trash" />-->



    <item android:title="@string/user_information">
        <menu>

            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/profile"
                android:title="@string/profile" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/rateus"
                android:title="@string/rate_us" />
            <item
                android:id="@+id/nav_whatsapp"
                android:icon="@drawable/whatsapp"
                android:title="@string/whatsapp" />
            <item
                android:id="@+id/nav_telegram"
                android:icon="@drawable/telegram"
                android:title="@string/telegram" />
        </menu>
    </item>
</menu>