<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        />
    <item
        android:id="@+id/placeholder"
        android:title="@string/task_list"
        android:icon="@drawable/task"
        />
    <item
        android:id="@+id/budget"
        android:title="@string/menubudget"
        android:icon="@drawable/budget_bottom_nav"
        />
    <item
        android:id="@+id/guest"
        android:title="@string/Menuguest"
        android:icon="@drawable/guest_bottom_nav"
        />


    <item
        android:id="@+id/vendor"
        android:title="@string/menuvendor"
        android:icon="@drawable/market"
        />
</menu>