<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Event_Details_Activity.GuestDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginBottom="10sp"
                android:text="@string/name"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/SubtaskNameEt"
                android:layout_width="400sp"
                android:layout_height="35sp"
                android:layout_marginStart="5sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/valueediteffect" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginBottom="10sp"
                android:text="@string/note"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/subtaskNoteET"
                android:layout_width="400sp"
                android:layout_height="35sp"
                android:layout_marginStart="5sp"
                android:layout_marginBottom="10sp"
                android:background="@drawable/valueediteffect" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10sp"
                android:layout_marginBottom="10sp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/subtaskpendingbut"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10sp"
                    android:background="@drawable/addpaymentbutton"
                    android:text="@string/taskpending" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/subtaskcombut"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/addpaymentbutton"
                    android:text="@string/completed" />

            </LinearLayout>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/subtasksubmit"
                android:layout_width="320sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/addpaymentbutton"
                android:text="Submit"
                android:textStyle="bold"
                />

</LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>