<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <!--    <androidx.cardview.widget.CardView-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="match_parent"-->
        <!--        android:layout_alignParentTop="true"-->
        <!--        android:background="#D3D3D3"-->
        <!--        app:cardCornerRadius="10dp"-->
        <!--        app:cardElevation="10dp"-->
        <!--        app:cardMaxElevation="6dp"-->
        <!--        app:cardUseCompatPadding="true"-->
        <!--        app:contentPadding="16dp">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="199dp"
                android:contentDescription="@string/app_logo"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/create_an_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="400sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="emailAddress"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/Aqua"
                app:boxStrokeErrorColor="#F40000"
                app:boxStrokeWidth="1dp"
                app:expandedHintEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintTextColor="#070707">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailfield"
                    android:layout_width="400sp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/email_address"
                    android:inputType="textEmailAddress"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/black"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="400sp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="emailAddress"
                android:textColorHint="@color/black"
                app:boxStrokeColor="@color/Aqua"
                app:boxStrokeErrorColor="#F40000"
                app:boxStrokeWidth="1dp"
                app:expandedHintEnabled="true"
                app:hintAnimationEnabled="true"
                app:hintTextColor="#070707"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passfield"
                    android:layout_width="400sp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:textColorHint="@color/black"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/createbutton"
                android:layout_width="300sp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/button_shape"
                android:text="@string/create_an_account"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/google_creation"
                android:layout_width="300sp"
                android:layout_height="65dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:background="@drawable/google_login_button"
                android:text="@string/continue_with_google"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/alreadyfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18dp"
                android:textStyle="bold" />
        </LinearLayout>
        <!--    </androidx.cardview.widget.CardView>-->
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>